# magma

./: .gitignore  WORKSPACE.bazel  pants.toml
.devcontainer/: Dockerfile  devcontainer.json  vscode-terminal.txt
.github/workflows/: 0-comment-on-pr.yml  abcde-test.yml  agw-build-publish-container.yml  backport-pull-request.yml  backport.yml  bazel.yml  build-vm-dev.yml  buildjet-test-foreign.yml  buildjet-test.yml  reviewdog-workflow.yml
bazel/bazelrcs/: devcontainer.bazelrc
ci-scripts/: PANTSBUILD
circleci/: PANTSBUILD
cn/deploy/scripts/: PANTSBUILD
cwf/gateway/deploy/roles/ovs/files/: PANTSBUILD
experimental/: Dockerfile
feg/gateway/docker/: PANTSBUILD
feg/gateway/services/aaa/protos/: accounting.proto  authorization.proto  eap.proto
feg/gateway/services/eap/protos/: eap_auth.proto
lte/gateway/c/core/oai/test/: PANTSBUILD
lte/gateway/configs/: PANTSBUILD
lte/gateway/deploy/roles/magma_test/files/: PANTSBUILD
lte/gateway/python/: PANTSBUILD
lte/gateway/python/integ_tests/cloud_tests/: PANTSBUILD
lte/gateway/python/integ_tests/gxgy_tests/: PANTSBUILD
lte/gateway/python/integ_tests/s1aptests/: PANTSBUILD
lte/gateway/python/load_tests/: PANTSBUILD
lte/gateway/python/magma/enodebd/: PANTSBUILD
lte/gateway/python/magma/mobilityd/: BUILD.bazel  PANTSBUILD  dhcp_client.py  dhcp_desc.py  ip_address_man.py  ip_allocator_base.py  ip_allocator_dhcp.py  ip_allocator_multi_apn.py  ip_allocator_pool.py  ip_allocator_static.py  ip_descriptor.py  ip_descriptor_map.py  ipv6_allocator_pool.py  mac.py  main.py  metrics.py  mobility_store.py  requirements.in  requirements.txt  rpc_servicer.py  serialize_utils.py  subscriberdb_client.py  uplink_gw.py
lte/gateway/python/magma/mobilityd/tests/: PANTSBUILD  ip_allocator_tests.py  rpc_servicer_tests.py
lte/gateway/python/magma/pipelined/: PANTSBUILD
lte/gateway/python/magma/pipelined/app/: PANTSBUILD
lte/gateway/python/magma/pipelined/ebpf/: PANTSBUILD
lte/gateway/python/magma/pipelined/qos/: PANTSBUILD
lte/gateway/python/magma/pipelined/tests/: PANTSBUILD
lte/gateway/python/magma/pkt_tester/tests/: PANTSBUILD  test_ovs_gtp.py
lte/gateway/python/magma/redirectd/: PANTSBUILD
lte/gateway/python/magma/subscriberdb/tests/: PANTSBUILD
lte/gateway/python/scripts/: PANTSBUILD
lte/protos/: BUILD.bazel
orc8r/cloud/deploy/terraform/orc8r-helm-aws/scripts/: PANTSBUILD
orc8r/cloud/docker/: PANTSBUILD
orc8r/cloud/docker/controller/: PANTSBUILD
orc8r/cloud/docker/nginx/: PANTSBUILD
orc8r/gateway/python/magma/common/: metrics_export.py
orc8r/gateway/python/magma/common/tests/: PANTSBUILD
orc8r/gateway/python/magma/magmad/tests/: PANTSBUILD
orc8r/gateway/python/scripts/: PANTSBUILD
orc8r/protos/: BUILD.bazel  PANTSBUILD  metricsd.proto
orc8r/tools/packer/: magma-focal-virtualbox.json  test.json
protos/: PANTSBUILD
show-tech/roles/cores/files/: PANTSBUILD
vscode-workspaces/: workspace.magma-vm-workspace.code-workspace
xwf/gateway/deploy/roles/containers/files/: PANTSBUILD
xwf/gateway/deploy/roles/deprovision/files/: PANTSBUILD
(+13 files in other folders)
